--- a/index.html
+++ b/index.html
@@ -153,38 +153,38 @@
         <div class="container_places">
         <div class="popcard">
             <h2>Connaught place</h2>
-            <span>389 places</span>
+            <span>389 places ></span>
         </div>
         <div class="popcard">
             <h2>Sector 29</h2>
-           <span>270 places</span>
+           <span>270 places ></span>
         </div>
         <div class="popcard">
             <h2>Sector 18,Noida</h2>
-            <span>299 places</span>
+            <span>299 places ></span>
         </div>
         <div class="popcard">
             <h2> Rajouri Garden</h2>
-            <span>52 places</span>
+            <span>52 places ></span>
         </div>
         <div class="popcard">
             <h2>Saket</h2>
-            <span>679 places</span>
+            <span>679 places ></span>
         </div>
         <div class="popcard">
             <h2>DLF Cyber City</h2>
-            <span>227 places</span>
+            <span>227 places ></span>
         </div>
         <div class="popcard">
             <h2>Golf Course Road</h2>
-            <span>257 places</span>
+            <span>257 places ></span>
         </div>
         <div class="popcard">
             <h2>DLF Phase 4</h2>
-            <span>752 places</span>
+            <span>752 places ></span>
         </div>
         <div class="popcard" >
-             <span id="654">see more</span>
+             <span id="654">see more ></span>
         </div>
        </div>
     </section>
@@ -225,19 +225,19 @@
     </section>
 
     <section class="explore_options">
-        <h1 id="exp">Explore options near me</h1>
+        <h1 id="exp">Explore options near me </h1>
         <div class="explore_cards">
         <div class="indi_card">
-          <span>Popular cuisines near me</span>
+          <span>Popular cuisines near me </span>
+        </div> 
+        <div class="indi_card">
+          <span>Popular restaurant types near me </span>
         </div>
         <div class="indi_card">
-          <span>Popular restaurant types near me</span>
+          <span>Top restaurant chains </span> 
         </div>
         <div class="indi_card">
-          <span>Top restaurant chains</span>
-        </div>
-        <div class="indi_card">
-          <span>Cities We Deliver To</span>
+          <span>Cities We Deliver To </span>
         </div>
         </div>
     </section>
