Added more cards

--- a/index.html
+++ b/index.html
@@ -141,6 +141,34 @@
             <span>30 Places</span>
           </div>
         </div>
+        <div class="card card5">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Independence Day offers</h4>
+            <span>49 Places</span>
+          </div>
+        </div>
+        <div class="card card6">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Weekend discounts</h4>
+            <span>76 Places</span>
+          </div>
+        </div>
+        <div class="card card7">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Rakshabandhan Special</h4>
+            <span>52 Places</span>
+          </div>
+        </div>
+        <div class="card card8">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Night Clubs</h4>
+            <span>64 Places</span>
+          </div>
+        </div>
       </div>
     </section>
 
